# Ailux

./: .gitignore  README-zh.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_zh.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
ailux/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ailux-android/: build.gradle.kts
ailux-android/src/androidTest/java/com/ailux/android/: ExampleInstrumentedTest.kt
ailux-android/src/main/java/com/ailux/android/: AiluxClientDelegate.kt  AiluxLifecycleBinder.kt  AiluxLifecyclePolicy.kt  AiluxViewModel.kt  AnonymousSessionTask.kt  AttachmentExt.kt  LifecycleExt.kt
ailux-android/src/test/java/com/ailux/android/: AttachmentExtTest.kt  ExampleUnitTest.kt
ailux-api/: build.gradle.kts
ailux-api/src/androidTest/java/com/ailux/api/: ExampleInstrumentedTest.kt
ailux-api/src/main/java/com/ailux/api/: Ailux.kt  AiluxClient.kt  AiluxConfig.kt
ailux-api/src/test/java/com/ailux/api/: AiluxClientDiagnosticsTest.kt  ExampleUnitTest.kt
ailux-backend-sample/: README.md  build.gradle
ailux-backend-sample/src/main/java/com/ailux/backend/: AiluxBackendApplication.java
ailux-backend-sample/src/main/resources/: application.yml
ailux-core/: build.gradle.kts
ailux-provider-backend/: build.gradle.kts
ailux-provider-local/: build.gradle.kts
ailux-provider-mock/: build.gradle.kts
ailux-runtime/: build.gradle.kts
ailux-runtime-litertlm/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ailux-runtime-litertlm/src/main/: AndroidManifest.xml
ailux-runtime-llamacpp/: .gitignore  README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ailux-runtime-llamacpp/src/main/: AndroidManifest.xml
ailux-runtime-llamacpp/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
ailux/src/main/: AndroidManifest.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: API-zh.md  API.md  CHANGELOG-zh.md  CHANGELOG.md  CONTRIBUTING-zh.md  CONTRIBUTING.md  DIAGNOSTICS-zh.md  DIAGNOSTICS.md  EXTENSIBILITY-zh.md  EXTENSIBILITY.md  LOGGING-zh.md  LOGGING.md  SESSION-ENGINE-AUDIT-zh.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
samples/ailux-backend-sample/: .env.example  .gitignore  README.md  build.gradle  gradlew  settings.gradle
samples/ailux-backend-sample/src/main/resources/: application.yml  data.sql  schema.sql
samples/chat-demo/: .gitignore  build.gradle.kts
samples/chat-demo/src/debug/: AndroidManifest.xml
samples/chat-demo/src/debug/res/xml/: network_security_config.xml
samples/chat-demo/src/main/: AndroidManifest.xml
samples/chat-demo/src/main/res/values/: strings.xml
(+250 files in other folders)
